syntax = "proto3";

package wings.v1.log_metadata;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "schema/arrow_type.proto";

service LogMetadataService {
  rpc CommitFolio(CommitFolioRequest) returns (CommitFolioResponse);

  rpc GetLogLocation(GetLogLocationRequest) returns (GetLogLocationResponse);

  rpc ListPartitions(ListPartitionsRequest) returns (ListPartitionsResponse);

  rpc RequestTask(RequestTaskRequest) returns (RequestTaskResponse);

  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse);
}

message CommitFolioRequest {
  string namespace = 1;
  string file_ref = 2;
  repeated CommitPageRequest pages = 3;
}

message CommitPageRequest {
  string topic = 1;
  optional PartitionValue partition = 2;
  uint32 num_messages = 3;
  uint64 offset_bytes = 4;
  uint64 batch_size_bytes = 5;
  repeated CommitBatchRequest batches = 6;
}

message CommitBatchRequest {
  /// The requested timestamp (if any) of the batch.
  optional google.protobuf.Timestamp timestamp = 1;
  /// The number of messages in the batch.
  uint32 num_messages = 2;
}

message CommitFolioResponse {
  repeated CommitPageResponse pages = 1;
}

message CommitPageResponse {
  string topic = 1;
  optional PartitionValue partition = 2;
  repeated CommittedBatch batches = 3;
}

message GetLogLocationRequest {
  string topic = 1;
  optional PartitionValue partition = 2;
  GetLogLocationOptions options = 3;
  uint64 offset = 4;
}

message GetLogLocationOptions {
  google.protobuf.Duration deadline = 1;
  uint32 min_rows = 2;
  uint32 max_rows = 3;
}

message TimestampRange {
  /// The start timestamp (inclusive) for the range query.
  google.protobuf.Timestamp start_timestamp = 1;
  /// The end timestamp (inclusive) for the range query.
  google.protobuf.Timestamp end_timestamp = 2;
}

message GetLogLocationResponse {
  repeated LogLocation locations = 1;
}

message LogLocation {
  oneof location {
    FolioLocation folio_location = 1;
  }
}

message FolioLocation {
  string file_ref = 1;
  uint64 offset_bytes = 2;
  uint64 size_bytes = 3;
  repeated CommittedBatch batches = 4;
}

message ListPartitionsRequest {
  string topic = 1;
  optional int32 page_size = 2;
  optional string page_token = 3;
}

message ListPartitionsResponse {
  repeated PartitionMetadata partitions = 1;
  optional string next_page_token = 2;
}

message PartitionMetadata {
  optional PartitionValue value = 1;
  LogOffset end_offset = 2;
}

message CommittedBatch {
  message Accepted {
    /// The offset assigned to the first message in the batch.
    uint64 start_offset = 1;
    /// The offset assigned to the last message in the batch.
    uint64 end_offset = 2;
    /// The timestamp assigned to the batch.
    google.protobuf.Timestamp timestamp = 3;
  }

  message Rejected {
    // How many messages were rejected.
    uint32 num_messages = 1;
    // The reason for rejection.
    string reason = 2;
  }

  oneof result {
    Accepted accepted = 1;
    Rejected rejected = 2;
  }
}

message LogOffset {
  uint64 offset = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message PartitionValue {
  oneof value {
    google.protobuf.Empty null_value = 1;

    int32 int8_value = 2;
    int32 int16_value = 3;
    int32 int32_value = 4;
    int64 int64_value = 5;

    uint32 uint8_value = 6;
    uint32 uint16_value = 7;
    uint32 uint32_value = 8;
    uint64 uint64_value = 9;

    string string_value = 10;
    bytes bytes_value = 11;
    bool bool_value = 12;
  }
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_FAILED = 4;
}

enum CompactionOperation {
  COMPACTION_OPERATION_UNSPECIFIED = 0;
  COMPACTION_OPERATION_APPEND = 1;
  COMPACTION_OPERATION_REPLACE = 2;
}

message CreateTableTask {
  string topic = 1;
}

message FileMetadata {
  uint64 file_size_bytes = 1;
  uint32 num_rows = 2;
  map<uint64, uint64> column_sizes = 3;
  map<uint64, uint64> value_counts = 4;
  map<uint64, uint64> null_value_counts = 5;
  map<uint64, wings.schema.Datum> lower_bounds = 6;
  map<uint64, wings.schema.Datum> upper_bounds = 7;
}

message FileInfo {
  string file_ref = 1;
  uint64 start_offset = 3;
  uint64 end_offset = 4;
  FileMetadata metadata = 5;
  google.protobuf.Timestamp modification_time = 6;
}

message CompactionTask {
  string topic = 1;
  optional PartitionValue partition = 2;
  uint64 start_offset = 3;
  uint64 end_offset = 4;
  CompactionOperation operation = 5;
  uint64 target_file_size = 6;
}

message CommitTask {
  string topic = 1;
  repeated FileInfo new_files = 2;
}

message CreateTableResult {
  string table_id = 1;
}

message CompactionResult {
  repeated FileInfo new_files = 1;
  CompactionOperation operation = 2;
}

message CommitResult {
  string table_version = 1;
}

message TaskResult {
  oneof result {
    CreateTableResult create_table = 1;
    CompactionResult compaction = 2;
    CommitResult commit = 3;
  }
}

message Task {
  string task_id = 1;
  TaskStatus status = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;

  oneof task {
    CreateTableTask create_table = 5;
    CompactionTask compaction = 6;
    CommitTask commit = 7;
  }
}

message RequestTaskRequest {}

message RequestTaskResponse {
  optional Task task = 1;
}

message CompleteTaskRequest {
  string task_id = 1;
  oneof result {
    TaskResult success = 2;
    string failure = 3; // error_message
  }
}

message CompleteTaskResponse {
  bool success = 1;
}
